Updated Experience Page
Added IIS logo
Added more technologies logos to experience page
Corrected a few spelling errors.
Added Target blank to footer links
Removed item group images

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -68,25 +68,25 @@
         <div id="nav2" name="nav2" class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse" style="text-align: right !important; float: right;">
             <ul id="list2" name="list2" class="navbar-nav flex-grow-1" style="text-align: right !important; float: right; display: block; ">
                 <li class="nav-item" style="text-align: right !important; float: right;">
-                    <a class="nav-link text-dark" href="https://www.linkedin.com/in/daniel-boldrin/">
+                    <a class="nav-link text-dark" href="https://www.linkedin.com/in/daniel-boldrin/" target="_blank">
                         <img class="intro__icon" src="~/Images/BW/linkedin.png" alt="LinkedIn Logo" style="border-radius: 50%; width: 25px; height: 25px;">
                         LinkedIn
                     </a>
                 </li>
                 <li class="nav-item" style="text-align: right !important; float: right;">
-                    <a class="nav-link text-dark" href="https://github.com/soueuroya">
+                    <a class="nav-link text-dark" href="https://github.com/soueuroya" target="_blank">
                         <img class="intro__icon" src="~/Images/BW/github.png" alt="Github Logo" style="border-radius: 50%; width: 25px; height: 25px;">
                         Github
                     </a>
                 </li>
                 <li class="nav-item, align-content-end" style="text-align: right !important; float: right;">
-                    <a class="nav-link text-dark" href="https://danielboldrin.itch.io/">
+                    <a class="nav-link text-dark" href="https://danielboldrin.itch.io/" target="_blank">
                         <img class="intro__icon" src="~/Images/BW/itchdotio.png" alt="Itch.io Logo" style="border-radius: 50%; width: 25px; height: 25px;">
                         Itch.io
                     </a>
                 </li>
                 <li class="nav-item, align-content-end" style="text-align: right !important; float: right;">
-                    <a class="nav-link text-dark" href="mailto:daniel_cboldrin@hotmail.com">
+                    <a class="nav-link text-dark" href="mailto:daniel_cboldrin@hotmail.com" target="_blank">
                         <img class="intro__icon" src="~/Images/BW/email.png" alt="Email Logo" style="border-radius: 50%; width: 25px; height: 25px;">
                         Contact
                     </a>
