Updated Education Page
Fixed technologies used for few education submissions
Improved welcome text in index
Added .doc and .pdf download options for resume
Added XNA logo icon

--- a/Pages/Education.cshtml
+++ b/Pages/Education.cshtml
@@ -91,17 +91,43 @@
             <br />
             <span>Technologies Learned</span>
             <br />
-            <a href="https://unity.com/" target="_blank" class="alt-wrap">
-                <img src="~/Images/BW/unity.png" alt="Unity3D" title="unity.com">
-                <p class="alt">Unity3D</p>
+            <a href="https://www.cprogramming.com/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/c.png" alt="C" title="cprogramming.com">
+                <p class="alt">C</p>
+            </a>
+            <a href="https://www.cplusplus.com/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/cplusplus.png" alt="C++" title="cplusplus.com">
+                <p class="alt">C++</p>
             </a>
             <a href="https://docs.microsoft.com/en-us/dotnet/csharp/" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/csharp.png" alt="C#" title="docs.microsoft.com/en-us/dotnet/csharp">
                 <p class="alt">C#</p>
             </a>
-            <a href="https://www.python.org/" target="_blank" class="alt-wrap">
-                <img src="~/Images/BW/python.png" alt="Python" title="python.org">
-                <p class="alt">Python</p>
+            <a href="https://www.java.com/en/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/java.png" alt="Java" title="java.com">
+                <p class="alt">Java</p>
+            </a>
+            <a href="https://www.microsoft.com/en-ca/download/details.aspx?id=20914" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/xna.png" alt="XNA" title="microsoft.com/en-ca/download/details.aspx?id=20914">
+                <p class="alt">XNA</p>
+            </a>
+            <br />
+            <a href="https://html.spec.whatwg.org/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/html5.png" alt="HTML5" title="html.spec.whatwg.org">
+                <p class="alt">HTML5</p>
+            </a>
+            <a href="https://www.w3.org/Style/CSS/Overview.en.html" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/css3.png" alt="CSS3" title="w3.org/Style/CSS/Overview.en.html">
+                <p class="alt">CSS3</p>
+            </a>
+            <a href="https://www.javascript.com/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/javascript.png" alt="Javascript" title="javascript.com">
+                <p class="alt">Javascript</p>
+            </a>
+            <br />
+            <a href="https://jquery.com/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/jquery.png" alt="jQuery" title="jquery.com">
+                <p class="alt">jQuery</p>
             </a>
             <a href="https://visualstudio.microsoft.com/" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/visualstudio.png" alt="Visual Studio" title="visualstudio.microsoft.com">
@@ -111,31 +137,31 @@
                 <img src="~/Images/BW/sql.png" alt="SQL" title="microsoft.com/en-us/sql-server/sql-server-2019">
                 <p class="alt">SQL</p>
             </a>
+            <a href="https://www.mysql.com/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/mysql.png" alt="MySQL" title="mysql.com">
+                <p class="alt">MySQL</p>
+            </a>
+            <br />
+            <a href="https://www.iis.net/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/iis.png" alt="IIS" title="iis.net">
+                <p class="alt">IIS</p>
+            </a>
             <br />
             <a href="https://www.android.com/intl/en_ca/" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/android.png" alt="Android" title="android.com/intl/en_ca">
                 <p class="alt">Android</p>
             </a>
-            <a href="https://www.javascript.com/" target="_blank" class="alt-wrap">
-                <img src="~/Images/BW/javascript.png" alt="Javascript" title="javascript.com">
-                <p class="alt">Javascript</p>
+            <a href="https://www.linux.org/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/linux.png" alt="Linux" title="linux.org">
+                <p class="alt">Linux</p>
             </a>
-            <a href="https://html.spec.whatwg.org/" target="_blank" class="alt-wrap">
-                <img src="~/Images/BW/html5.png" alt="HTML5" title="html.spec.whatwg.org">
-                <p class="alt">HTML5</p>
+            <a href="https://www.microsoft.com/en-ca/windows" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/windows.png" alt="Windows" title="microsoft.com">
+                <p class="alt">Windows</p>
             </a>
-            <a href="https://www.w3.org/Style/CSS/Overview.en.html" target="_blank" class="alt-wrap">
-                <img src="~/Images/BW/css3.png" alt="CSS3" title="www.w3.org/Style/CSS/Overview.en.html">
-                <p class="alt">CSS3</p>
-            </a>
-            <a href="https://www.mixamo.com" target="_blank" class="alt-wrap">
-                <img src="~/Images/BW/mixamo.png" alt="Mixamo" title="mixamo.com">
-                <p class="alt">Mixamo</p>
-            </a>
-            <br />
-            <a href="https://zoom.us/" target="_blank" class="alt-wrap">
-                <img src="~/Images/BW/zoom.png" alt="Zoom" title="zoom.us">
-                <p class="alt">Zoom</p>
+            <a href="https://www.microsoft.com/en-ca/microsoft-365/excel" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/microsoftexcel.png" alt="Excel" title="microsoft.com/en-ca/microsoft-365/excel">
+                <p class="alt">Excel</p>
             </a>
         </div>
 
