--- a/Pages/Resume.cshtml
+++ b/Pages/Resume.cshtml
@@ -21,8 +21,10 @@
         <br />
         <br />
         <br />
-        <img src="~/Images/BW/word.png" alt="Daniel Corbi Boldrin Avatar" style="border-radius: 25%; max-width: 100px; max-height: 100px;">
-        <img src="~/Images/BW/pdf.png" alt="Daniel Corbi Boldrin Avatar" style="border-radius: 25%; max-width: 100px; max-height: 100px;">
+        <a href="~/Documents/CV.docx" target="_blank"><img src="~/Images/BW/word.png" alt="Word Document" style="border-radius: 25%; max-width: 100px; max-height: 100px;">
+        </a>
+        <a href="~/Documents/CV.pdf" target="_blank"><img src="~/Images/BW/pdf.png" alt="PDF Document" style="border-radius: 25%; max-width: 100px; max-height: 100px;">
+        </a>
         <h2 class="intro__tagline" style="text-align: right;">
             I'm <span class="name">Daniel Boldrin</span>, a passionate professional System Analyst and Game Programmer who loves to design and develop games and applications.
         </h2>
