--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -29,7 +29,7 @@
     <h3 class="intro__contact" style="text-align: center; overflow:hidden;">
         <p  class="animated">
             <span>
-                <a href="mailto:daniel_cboldrin@hotmail.com" target="_blank" class="highlight-link">daniel_cboldrin@hotmail.com<img class="intro__icon" src="~/Images/BW/email-t.png" alt="Daniel Corbi Boldrin Avatar" style="border-radius: 50%; width:25px; height:25px; margin-left: 10px;"></a>
+                Want to get in touch? You can reach me at <a href="mailto:daniel_cboldrin@hotmail.com" target="_blank" class="highlight-link">daniel_cboldrin@hotmail.com<img class="intro__icon" src="~/Images/BW/email-t.png" alt="Daniel Corbi Boldrin Avatar" style="border-radius: 50%; width:25px; height:25px; margin-left: 10px;"></a>
             </span>
         </p>
     </h3>
