Updated Education Page
Added certifications animations when hovering over title

--- a/Pages/Experience.cshtml
+++ b/Pages/Experience.cshtml
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="~/css/main.css" />
     <script defer="" src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
-<header class="intro" style="margin-top: -48.5px;">
+<header class="intro" style="margin-top: -60px;">
     <!-- HALTON -->
     <div class="intro__wrap">
         <h1 class="intro__hello">Game Programming Teacher</h1>
@@ -53,24 +53,31 @@
                 <img src="~/Images/BW/mixamo.png" alt="Mixamo" title="mixamo.com">
                 <p class="alt">Mixamo</p>
             </a>
+            <br />
             <a href="https://zoom.us/" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/zoom.png" alt="Zoom" title="zoom.us">
                 <p class="alt">Zoom</p>
+            </a>
+            <a href="https://www.microsoft.com/en-ca/windows" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/windows.png" alt="Windows" title="microsoft.com">
+                <p class="alt">Windows</p>
             </a>
         </div>
 
         <h2 class="intro__tagline" style="text-align: center;">
             Responsible for planning, organizing, and teaching <span class="name">
-    game programming</span> remote classes with
-    <span class="name">Unity3D</span> and <span class="name">C#</span>
-    for semi-private classes of 2 students.
-    <br />
-    Recognized for teaching and course coordination excellence.
-</h2>
+                game programming
+            </span> remote classes with
+            <span class="name">Unity3D</span> and <span class="name">C#</span>
+            for semi-private classes of 2 students.
+            <br />
+            Recognized for teaching and course coordination excellence.
+        </h2>
     </div>
 </header>
 <div style="clear:both; border-bottom: 1px solid black; width: 100%;"></div>
-<header class="intro"> <!-- WELLS ACADEMY -->
+<header class="intro">
+    <!-- WELLS ACADEMY -->
     <div class="intro__wrap">
         <br />
         <h1 class="intro__hello">Game Programming Teacher</h1>
@@ -145,22 +152,32 @@
                 <img src="~/Images/BW/zoom.png" alt="Zoom" title="zoom.us">
                 <p class="alt">Zoom</p>
             </a>
+            <a href="https://www.microsoft.com/en-ca/windows" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/windows.png" alt="Windows" title="microsoft.com">
+                <p class="alt">Windows</p>
+            </a>
+            <a href="https://www.microsoft.com/en-ca/microsoft-365/excel" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/microsoftexcel.png" alt="Excel" title="microsoft.com/en-ca/microsoft-365/excel">
+                <p class="alt">Excel</p>
+            </a>
         </div>
 
         <h2 class="intro__tagline" style="text-align: center;">
-            Responsible for planning, organizing, and teaching <span class="name">
-    game programming</span> and <span class="name">
-    web development</span> remote classes with
-    <span class="name">Unity3D</span> and <span class="name">C#</span>
-    for class sizes of 6 students from grade 6 to 12.
-    <br />
-    Recognized for teaching and course coordination excellence.
-</h2>
+            Responsible for planning, organizing, and teaching
+            <span class="name">game programming</span> and <span class="name">web development</span>
+            remote classes with
+            <span class="name">Unity3D</span> and <span class="name">C#</span>
+            <br />
+            Taught semi-private class sizes up to 6 students from grade 6 to 12.
+            <br />
+            Recognized for teaching and course coordination excellence.
+        </h2>
     </div>
     <br />
 </header>
 <div style="clear:both; border-bottom: 1px solid black; width: 100%;"></div>
-<header class="intro"> <!-- THINNOX -->
+<header class="intro">
+    <!-- THINNOX -->
     <div class="intro__wrap">
         <br />
         <h1 class="intro__hello">Game Programming Teacher</h1>
@@ -228,11 +245,11 @@
                 <img src="~/Images/BW/photoshop.png" alt="Photoshop" title="photoshop.com/en">
                 <p class="alt">Photoshop</p>
             </a>
-            <br />
             <a href="https://www.microsoft.com/en-ca/microsoft-365/excel" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/microsoftexcel.png" alt="Excel" title="microsoft.com/en-ca/microsoft-365/excel">
                 <p class="alt">Excel</p>
             </a>
+            <br />
             <a href="https://www.toonboom.com" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/toonboom.png" alt="Toon Boom" title="toonboom.com">
                 <p class="alt">Toon Boom</p>
@@ -253,12 +270,16 @@
                 <img src="~/Images/BW/moodle.jpeg" alt="Moodle" title="moodle.org">
                 <p class="alt">Moodle</p>
             </a>
+            <a href="https://www.microsoft.com/en-ca/windows" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/windows.png" alt="Windows" title="microsoft.com">
+                <p class="alt">Windows</p>
+            </a>
         </div>
 
         <h2 class="intro__tagline" style="text-align: center;">
             Planned, organized, and taught
             <span class="name">programming, 3D animation, modeling, circuits, technical drawing, and game design </span>
-            presential and remote classes. 
+            presential and remote classes.
             <br />
             Class sizes of 12 students from grade 8 to 12.
             <br />
@@ -269,7 +290,8 @@
     <br />
 </header>
 <div style="clear:both; border-bottom: 1px solid black; width: 100%;"></div>
-<header class="intro"> <!-- RP4k -->
+<header class="intro">
+    <!-- RP4k -->
     <div class="intro__wrap">
         <br />
         <h1 class="intro__hello">Game Programming Teacher</h1>
@@ -304,9 +326,14 @@
                 <img src="~/Images/BW/alice.png" alt="Alice" title="alice.org">
                 <p class="alt">Alice</p>
             </a>
+            <br />
             <a href="https://scratch.mit.edu/" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/scratch.png" alt="Scratch" title="scratch.mit.edu">
                 <p class="alt">Scratch</p>
+            </a>
+            <a href="https://www.microsoft.com/en-ca/windows" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/windows.png" alt="Windows" title="microsoft.com">
+                <p class="alt">Windows</p>
             </a>
         </div>
         <h2 class="intro__tagline" style="text-align: center;">
@@ -319,7 +346,8 @@
     <br />
 </header>
 <div style="clear:both; border-bottom: 1px solid black; width: 100%;"></div>
-<header class="intro">  <!-- PROGRAMMERS -->
+<header class="intro">
+    <!-- PROGRAMMERS -->
     <div class="intro__wrap">
         <br />
         <h1 class="intro__hello">System Analyst</h1>
@@ -415,7 +443,8 @@
     <br />
 </header>
 <div style="clear:both; border-bottom: 1px solid black; width: 100%;"></div>
-<header class="intro">   <!-- GRX -->
+<header class="intro">
+    <!-- GRX -->
     <div class="intro__wrap">
         <br />
         <h1 class="intro__hello">Full Stack Developer</h1>
@@ -522,7 +551,8 @@
     <br />
 </header>
 <div style="clear:both; border-bottom: 1px solid black; width: 100%;"></div>
-<header class="intro">   <!-- HP -->
+<header class="intro">
+    <!-- HP -->
     <div class="intro__wrap">
         <br />
         <h1 class="intro__hello">Analyst Developer</h1>
@@ -605,7 +635,8 @@
     <br />
 </header>
 <div style="clear:both; border-bottom: 1px solid black; width: 100%;"></div>
-<header class="intro">   <!-- CAST -->
+<header class="intro">
+    <!-- CAST -->
     <div class="intro__wrap">
         <br />
         <h1 class="intro__hello">Analyst Developer</h1>
@@ -641,11 +672,11 @@
                 <img src="~/Images/BW/csharp.png" alt="C#" title="docs.microsoft.com/en-us/dotnet/csharp">
                 <p class="alt">C#</p>
             </a>
+            <br />
             <a href="https://jquery.com/" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/jquery.png" alt="jQuery" title="jquery.com">
                 <p class="alt">jQuery</p>
             </a>
-            <br />
             <a href="https://html.spec.whatwg.org/" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/html5.png" alt="HTML5" title="html.spec.whatwg.org">
                 <p class="alt">HTML5</p>
@@ -658,6 +689,7 @@
                 <img src="~/Images/BW/javascript.png" alt="Javascript" title="javascript.com">
                 <p class="alt">Javascript</p>
             </a>
+            <br />
             <a href="https://visualstudio.microsoft.com/" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/visualstudio.png" alt="Visual Studio" title="visualstudio.microsoft.com">
                 <p class="alt">Visual Studio</p>
@@ -670,6 +702,10 @@
                 <img src="~/Images/BW/skypeforbusiness.png" alt="SkypeForBusiness" title="skype.com/en">
                 <p class="alt">Skype for Business</p>
             </a>
+            <a href="https://www.microsoft.com/en-ca/windows" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/windows.png" alt="Windows" title="microsoft.com">
+                <p class="alt">Windows</p>
+            </a>
         </div>
 
         <h2 class="intro__tagline" style="text-align: center;">
@@ -681,7 +717,8 @@
     <br />
 </header>
 <div style="clear:both; border-bottom: 1px solid black; width: 100%;"></div>
-<header class="intro">   <!-- LIDER -->
+<header class="intro">
+    <!-- LIDER -->
     <div class="intro__wrap">
         <br />
         <h1 class="intro__hello">Full Stack Developer</h1>
@@ -725,7 +762,6 @@
                 <img src="~/Images/BW/javascript.png" alt="Javascript" title="javascript.com">
                 <p class="alt">Javascript</p>
             </a>
-            <br />
             <a href="https://jquery.com/" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/jquery.png" alt="jQuery" title="jquery.com">
                 <p class="alt">jQuery</p>
@@ -734,6 +770,7 @@
                 <img src="~/Images/BW/visualstudio.png" alt="Visual Studio" title="visualstudio.microsoft.com">
                 <p class="alt">Visual Studio</p>
             </a>
+            <br />
             <a href="https://www.highcharts.com/" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/highcharts.jpg" alt="Highcharts" title="highcharts.com">
                 <p class="alt">Highcharts</p>
@@ -746,7 +783,6 @@
                 <img src="~/Images/BW/mysql.png" alt="MySQL" title="mysql.com">
                 <p class="alt">MySQL</p>
             </a>
-            <br />
             <a href="https://www.iis.net/" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/iis.png" alt="IIS" title="iis.net">
                 <p class="alt">IIS</p>
@@ -763,11 +799,15 @@
                 <img src="~/Images/BW/kendo2.png" alt="Kendo UI" title="pluralsight.com">
                 <p class="alt">Kendo UI</p>
             </a>
+            <br />
+            <a href="https://tortoisesvn.net/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/tortoise.png" alt="Tortoise" title="https://tortoisesvn.net/">
+                <p class="alt">Tortoise</p>
+            </a>
             <a href="https://www.zend.com/" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/zend.png" alt="Zend" title="zend.com">
                 <p class="alt">Zend</p>
             </a>
-            <br />
             <a href="https://www.android.com/intl/en_ca/" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/android.png" alt="Android" title="android.com/intl/en_ca">
                 <p class="alt">Android</p>
@@ -788,6 +828,7 @@
                 <img src="~/Images/BW/microsoftexcel.png" alt="Excel" title="microsoft.com/en-ca/microsoft-365/excel">
                 <p class="alt">Excel</p>
             </a>
+            <br />
         </div>
 
         <h2 class="intro__tagline" style="text-align: center;">
@@ -805,10 +846,9 @@
 
 <style>
 
-    .intro__tagline
-    {
+    .intro__tagline {
         text-align: left !important;
-        font-size: 24px !important;
+        font-size: 20px !important;
     }
 
     .scrollable {
