--- a/Pages/Resume.cshtml
+++ b/Pages/Resume.cshtml
@@ -21,21 +21,11 @@
         <br />
         <br />
         <br />
-        <a href="~/Documents/CV.docx" target="_blank"><img src="~/Images/BW/word.png" alt="Word Document" style="border-radius: 25%; max-width: 100px; max-height: 100px;">
+        <a href="~/Documents/CV.docx" target="_blank"><img src="~/Images/BW/word.png" alt="Word Document" style="border-radius: 25%; max-width: 200px; max-height: 200px; text-align: center;">
         </a>
-        <a href="~/Documents/CV.pdf" target="_blank"><img src="~/Images/BW/pdf.png" alt="PDF Document" style="border-radius: 25%; max-width: 100px; max-height: 100px;">
+        <a href="~/Documents/CV.pdf" target="_blank"><img src="~/Images/BW/pdf.png" alt="PDF Document" style="border-radius: 25%; max-width: 200px; max-height: 200px; text-align: center;">
         </a>
-        <h2 class="intro__tagline" style="text-align: right;">
-            I'm <span class="name">Daniel Boldrin</span>, a passionate professional System Analyst and Game Programmer who loves to design and develop games and applications.
-        </h2>
     </div>
-    <h3 class="intro__contact" style="text-align: center; overflow:hidden;">
-        <p class="animated">
-            <span>
-                <a href="mailto:daniel_cboldrin@hotmail.com" target="_blank" class="highlight-link">daniel_cboldrin@hotmail.com<img class="intro__icon" src="~/Images/BW/email-t.png" alt="Daniel Corbi Boldrin Avatar" style="border-radius: 50%; width:25px; height:25px; margin-left: 10px;"></a>
-            </span>
-        </p>
-    </h3>
     <br />
     <br />
 </header>
