--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Daniel Boldrin Portifolio</title>
+    <title>@ViewData["Title"] - Daniel Boldrin Portfolio</title>
     <link rel="icon" type="image/png" href="~/Images/avatar.jpg" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white" style="padding-bottom: 0px; height: 6vh;">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index" style="margin-right: 60px;">Daniel Boldrin Portifolio</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index" style="margin-right: 60px;">Daniel Boldrin Portfolio</a>
                 <button id="btn1" class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -23,21 +23,24 @@
                         <li class="nav-item menu-home">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
-                        <li class="nav-item menu-resume">
+                        <!--<li class="nav-item menu-resume">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Resume">Resume</a>
-                        </li>
+                        </li>-->
                         <li class="nav-item menu-games">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Games">Games</a>
                         </li>
+                        <!--
                         <li class="nav-item menu-projects">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Projects">Projects</a>
                         </li>
+                            -->
                         <li class="nav-item menu-experience">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Experience">Experience</a>
                         </li>
                         <li class="nav-item menu-education">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Education">Education</a>
                         </li>
+                        <!--
                         <li class="nav-item menu-contact">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Contact">Contact</a>
                         </li>
