--- a/Pages/Education.cshtml
+++ b/Pages/Education.cshtml
@@ -15,7 +15,10 @@
 <header class="intro" style="margin-top: -20px !important;">
     <!-- GBC -->
     <div class="intro__wrap">
-        <h1 class="intro__hello">Game Programming - Diploma</h1>
+        <h1 class="intro__hello pop-wrap">
+            Game Programming - Advanced Diploma
+            <img class="popup" src="~/Images/gbcdiploma.png" alt="Game Programming Diploma" style="border-radius: 5%; max-height: 500px;">
+        </h1>
         <br />
         <br />
         <br />
@@ -43,9 +46,30 @@
                 <img src="~/Images/BW/csharp.png" alt="C#" title="docs.microsoft.com/en-us/dotnet/csharp">
                 <p class="alt">C#</p>
             </a>
+            <a href="https://www.cplusplus.com/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/cplusplus.png" alt="C++" title="cplusplus.com">
+                <p class="alt">C++</p>
+            </a>
+            <a href="https://www.opengl.org/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/opengl.png" alt="OpenGL" title="opengl.org">
+                <p class="alt">OpenGL</p>
+            </a>
             <a href="https://visualstudio.microsoft.com/" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/visualstudio.png" alt="Visual Studio" title="visualstudio.microsoft.com">
                 <p class="alt">Visual Studio</p>
+            </a>
+            <br />
+            <a href="https://github.com/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/github.png" alt="Github" title="github.com">
+                <p class="alt">Github</p>
+            </a>
+            <a href="https://www.perforce.com/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/perforce.png" alt="Perforce" title="perforce.com">
+                <p class="alt">Perforce</p>
+            </a>
+            <a href="https://www.unrealengine.com/en-US/unreal" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/unrealengine.png" alt="Unreal Engine" title="unrealengine.com">
+                <p class="alt">Unreal Engine</p>
             </a>
             <a href="https://www.mixamo.com" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/mixamo.png" alt="Mixamo" title="mixamo.com">
@@ -58,11 +82,15 @@
         </div>
 
         <h2 class="intro__tagline" style="text-align: center;">
-            Responsible for planning, organizing, and teaching game programming and web development remote classes with
-            <span class="name">Unity3D</span> and <span class="name">C#</span>
-            for class sizes of 6 students from grade 6 to 12.
+            Studied computer languages such as C, C++, C#, Java, Lua and Python.
             <br />
-            Recognized for teaching and course coordination excellence.
+            Studied networking, security, operational systems, and database management.
+            <br />
+            Volunteered for mentorship in Object Oriented Programming, Logic, Analysis and Development, Algorithm, and Data Structure.
+            <br />
+            Completeed an undergraduate research in `Web Accessibility`
+            <br />
+            Taught C# and XNA Game Programming classes for grade 12 students.
         </h2>
     </div>
 </header>
@@ -71,7 +99,10 @@
     <!-- IFSP -->
     <div class="intro__wrap">
         <br />
-        <h1 class="intro__hello">System Analysis and Development - Diploma</h1>
+        <h1 class="intro__hello pop-wrap">
+            System Analysis and Development - Diploma
+            <img class="popup" src="~/Images/ifspdiploma.png" alt="Syste, Analysis and Development Diploma" style="border-radius: 5%; max-height: 500px;">
+        </h1>
         <br />
         <br />
         <br />
@@ -111,11 +142,11 @@
                 <img src="~/Images/BW/xna.png" alt="XNA" title="microsoft.com/en-ca/download/details.aspx?id=20914">
                 <p class="alt">XNA</p>
             </a>
-            <br />
             <a href="https://html.spec.whatwg.org/" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/html5.png" alt="HTML5" title="html.spec.whatwg.org">
                 <p class="alt">HTML5</p>
             </a>
+            <br />
             <a href="https://www.w3.org/Style/CSS/Overview.en.html" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/css3.png" alt="CSS3" title="w3.org/Style/CSS/Overview.en.html">
                 <p class="alt">CSS3</p>
@@ -124,7 +155,6 @@
                 <img src="~/Images/BW/javascript.png" alt="Javascript" title="javascript.com">
                 <p class="alt">Javascript</p>
             </a>
-            <br />
             <a href="https://jquery.com/" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/jquery.png" alt="jQuery" title="jquery.com">
                 <p class="alt">jQuery</p>
@@ -137,16 +167,15 @@
                 <img src="~/Images/BW/sql.png" alt="SQL" title="microsoft.com/en-us/sql-server/sql-server-2019">
                 <p class="alt">SQL</p>
             </a>
+            <br />
             <a href="https://www.mysql.com/" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/mysql.png" alt="MySQL" title="mysql.com">
                 <p class="alt">MySQL</p>
             </a>
-            <br />
             <a href="https://www.iis.net/" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/iis.png" alt="IIS" title="iis.net">
                 <p class="alt">IIS</p>
             </a>
-            <br />
             <a href="https://www.android.com/intl/en_ca/" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/android.png" alt="Android" title="android.com/intl/en_ca">
                 <p class="alt">Android</p>
@@ -166,45 +195,17 @@
         </div>
 
         <h2 class="intro__tagline" style="text-align: center;">
-            Responsible for planning, organizing, and teaching game programming and web development remote classes with
-            <span class="name">Unity3D</span> and <span class="name">C#</span>
-            for class sizes of 6 students from grade 6 to 12.
+            Studied computer languages such as C, C++, C#, Java, Lua and Python.
             <br />
-            Recognized for teaching and course coordination excellence.
+            Studied networking, security, operational systems, and database management.
+            <br />
+            Volunteered for mentorship in Object Oriented Programming, Logic, Analysis and Development, Algorithm, and Data Structure.
+            <br />
+            Completeed an undergraduate research in `Web Accessibility`
+            <br />
+            Taught C# and XNA Game Programming classes for grade 12 students.
         </h2>
     </div>
-    <br />
-</header>
-<div style="clear:both; border-bottom: 1px solid black; width: 100%;"></div>
-<header class="intro">
-    <!-- HP -->
-    <div class="intro__wrap">
-        <br />
-        <h1 class="intro__hello">Standards of Business Conduct - Certificate</h1>
-        <br />
-        <br />
-        <br />
-        <div class="company">
-            <h1 class="intro__hello">Hewlett Packard</h1>
-            <a href="https://www.hpe.com/us/en/home.html" target="_blank"><span>hp.com</span></a>
-            <br />
-            <br />
-            <img src="~/Images/hp.jpg" alt="Hewlett Packard Logo" title="Hewlett Packard" style="border-radius: 5%; max-width: 220px; max-height: 220px;">
-            <br />
-            <span>Araraquara, SP - Brazil</span>
-            <br />
-            <span>Concluded in July 2015</span>
-        </div>
-
-        <h2 class="intro__tagline" style="text-align: center;">
-            Planned, organized, and taught
-            <span class="name">programming, 3D animation, modeling, circuits, technical drawing, and game design </span>
-            classes for class sizes of 12 students from grade 6 to 12.
-            <br />
-            Recognized for teaching excellence and instructional reports to student’s parents.
-        </h2>
-    </div>
-    <br />
     <br />
 </header>
 <div style="clear:both; border-bottom: 1px solid black; width: 100%;"></div>
@@ -212,7 +213,10 @@
     <!-- IFSP -->
     <div class="intro__wrap">
         <br />
-        <h1 class="intro__hello">Web Accessibility - Undergraduate Research</h1>
+        <h1 class="intro__hello pop-wrap">
+            Web Accessibility - Undergraduate Research
+            <img class="popup" src="~/Images/IC.png" alt="Undergraduate Research Certification" style="border-radius: 5%; max-height: 500px;">
+        </h1>
         <br />
         <br />
         <br />
@@ -222,19 +226,32 @@
             <br />
             <br />
             <br />
-            <img src="~/Images/ifsp2.png" alt="IFSP Logo" title="Federal Institute of São Paulo" style="border-radius: 5%; max-width: 250px; max-height: 250px;">
+            <img src="~/Images/ifsp.png" alt="IFSP Logo" title="Federal Institute of São Paulo" style="border-radius: 5%; max-width: 250px; max-height: 250px;">
             <br />
             <br />
-            <span>Avaré, SP - Brazil</span>
+            <span class="pop-wrap">Avaré, SP - Brazil
+                <img class="popup" src="~/Images/avare.png" alt="Undergraduate Research Certification" style="border-radius: 5%; max-height: 500px;">
             <br />
-            <span>Concluded in November 2012</span>
+            Presented in November 2012</span>
+            <br />
+            <br />
+            <span class="pop-wrap">Araraquara, SP - Brazil
+                <img class="popup" src="~/Images/araraquara.png" alt="Undergraduate Research Certification" style="border-radius: 5%; max-height: 500px;">
+            <br />
+            Presented in October 2012</span>
+            <br />
+            <br />
+            <span class="pop-wrap">Florianópolis, SC - Brazil
+                <img class="popup" src="~/Images/florianopolis.png" alt="Undergraduate Research Certification" style="border-radius: 5%; max-height: 500px;">            
+            <br />
+            Presented in May and June 2012</span>
         </div>
         <h2 class="intro__tagline" style="text-align: center;">
-            Responsible for planning, organizing, and teaching game programming and web development remote classes with
-            <span class="name">Unity3D</span> and <span class="name">C#</span>
-            for class sizes of 6 students from grade 6 to 12.
+            Researched human-computer interaction, different disabilities, and how they impact users` experience with websites.
             <br />
-            Recognized for teaching and course coordination excellence.
+            Researched W3C system affordance best practices and standards.
+            <br />
+            As a result, I created a specialized survey to assure the quality and the accessibility of websites for users with different disabilities, with an emphasis on governmental systems.
         </h2>
     </div>
     <br />
@@ -244,7 +261,10 @@
     <!-- MOURA -->
     <div class="intro__wrap">
         <br />
-        <h1 class="intro__hello">Biz Game Development - Voluntary Presenter</h1>
+        <h1 class="intro__hello pop-wrap">
+            Biz Game Development - Voluntary Presenter
+            <img class="popup" src="~/Images/bizgames.png" alt="Biz Games Certification" style="border-radius: 5%; max-height: 500px;">
+        </h1>
         <br />
         <br />
         <br />
@@ -257,23 +277,77 @@
             <br />
             <span>Araraquara, SP - Brazil</span>
             <br />
-            <span>Concluded in November 2013</span>
+            <span>Presented in November 2013</span>
         </div>
         <h2 class="intro__tagline" style="text-align: center;">
-            Responsible for planning, organizing, and teaching game programming and web development remote classes with
-            <span class="name">Unity3D</span> and <span class="name">C#</span>
-            for class sizes of 6 students from grade 6 to 12.
+            Volunteered to be one of the Business and Game Development presenter at SESC Araraquara.
             <br />
-            Recognized for teaching and course coordination excellence.
+            Presented 3 mini games made with C# and XNA.
         </h2>
     </div>
     <br />
 </header>
+<div style="clear:both; border-bottom: 1px solid black; width: 100%;"></div>
+<header class="intro">
+    <!-- HP -->
+    <div class="intro__wrap">
+        <br />
+        <h1 class="intro__hello pop-wrap">
+            Standards of Business Conduct - Certification
+            <img class="popup" src="~/Images/HPCERT.png" alt="HP Certification" style="border-radius: 5%; max-height: 500px;">
+        </h1>
+        <br />
+        <br />
+        <br />
+        <div class="company">
+            <h1 class="intro__hello">Hewlett Packard</h1>
+            <a href="https://www.hpe.com/us/en/home.html" target="_blank"><span>hp.com</span></a>
+            <br />
+            <br />
+            <img src="~/Images/hp.jpg" alt="Hewlett Packard Logo" style="border-radius: 5%; max-width: 200px; max-height: 200px;">
+            <br />
+            <br />
+            <span>Araraquara, SP - Brazil</span>
+            <br />
+            <span>Completed in July 2015</span>
+        </div>
+    </div>
+    <br />
+</header>
+<div style="clear:both; border-bottom: 1px solid black; width: 100%;"></div>
+<header class="intro">
+    <!-- HAND EYE -->
+    <div class="intro__wrap">
+        <br />
+        <h1 class="intro__hello">Secret Acting Role - Voluntary</h1>
+        <br />
+        <br />
+        <br />
+        <div class="company">
+            <h1 class="intro__hello">Hand Eye Society</h1>
+            <a href="https://www.handeyesociety.com/" target="_blank"><span>handeyesociety.com</span></a>
+            <br />
+            <br />
+            <img src="~/Images/handeyesociety.png" alt="Hand Eye Society" style="border-radius: 5%; max-width: 200px; max-height: 200px;">
+            <br />
+            <span>Toronto, ON - Brazil</span>
+            <br />
+            <span>Volunteered in August 2018</span>
+        </div>
+        <h2 class="intro__tagline" style="text-align: center;">
+            Volunteered to be the secret agent acting role during the ball.
+            <br />
+            Responsable for guests interactiveness with the main game played during the night.
+        </h2>
+    </div>
+    <br />
+</header>
+
 <style>
 
     .intro__tagline {
         text-align: left !important;
-        font-size: 24px !important;
+        font-size: 20px !important;
     }
 
     .scrollable {
