--- a/wwwroot/css/main.css
+++ b/wwwroot/css/main.css
@@ -1,4 +1,6 @@
 ﻿.animated {
+    transition: all 600ms ease;
+    transition-delay: 0ms;
     animation-duration: 1s;
     animation-name: slidein;
 }
@@ -616,23 +618,123 @@ html #top-button img {
     min-width: 350px;
 }
 
-    .intro__hello .wave-hand {
-        background-image: url(../img/emojis/wave.png);
-        margin-left: 10px;
-        cursor: pointer
-    }
+.avatar__wave {
+    margin-left: 10px;
+    cursor: pointer
+}
 
-        .intro__hello .wave-hand.animated {
-            -webkit-animation-duration: 1s;
-            animation-duration: 1s;
-            -webkit-animation-fill-mode: both;
-            animation-fill-mode: both
-        }
 
-        .intro__hello .wave-hand.wave {
-            -webkit-animation-name: wave;
-            animation-name: wave
-        }
+.popup {
+    z-index: 100;
+}
+
+a.navbar-brand {
+    white-space: normal;
+    text-align: center;
+    word-break: break-all;
+}
+
+.alt {
+    color: white;
+    font-size: 14px;
+    height: 0px;
+}
+
+.company {
+    float: right;
+    text-align: center;
+    margin-top: -120px;
+}
+
+.alt-wrap p.alt {
+    display: block;
+    position: fixed;
+    bottom: -100px;
+    opacity: 0; /* hide initially */
+    line-height: 40px;
+    font-size: 25px;
+    background-color: rgba(0,0,0,0.9);
+    transition: all 300ms ease;
+    transition-delay: 0ms;
+}
+
+.alt-wrap:hover {
+    text-decoration: none;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+    /* Hovering over the wrapper shows its alt p*/
+.alt-wrap:hover > p.alt {
+    height: 40px;
+    opacity: 1;
+    transition-delay: 0s;
+    left: 200px;
+    right: 200px;
+    top: 10px;
+    transition: all 300ms ease;
+}
+
+.pop-wrap {
+    text-decoration: underline;
+}
+
+.pop-wrap img.popup {
+    display: block;
+    position: fixed;
+    filter: blur(5px);
+    left: 0px;
+    bottom: 0px;
+    opacity: 0; /* hide initially */
+    transition: all 600ms ease;
+    transition-delay: 0ms;
+    height: 0%;
+}
+
+.pop-wrap:hover > img.popup {
+    height: 100%;
+    opacity: 1;
+    transition-delay: 0s;
+    left: 10px;
+    bottom: 55px;
+    transition: all 600ms ease;
+    filter: blur(0px);
+}
+
+a img {
+    /*filter: invert(100%);*/
+    filter: brightness(70%);
+    border-radius: 50%;
+    max-width: 25px;
+    max-height: 25px;
+}
+
+a:hover img {
+    /*filter: invert(100%);*/
+    filter: brightness(100%);
+    box-shadow: 0 4px 20px -5px black;
+}
+
+/* Provide sufficient contrast against white background */
+a {
+    color: #0366d6;
+}
+
+#Avatar:hover {
+    box-shadow: 0 4px 10px -2px black;
+}
+
+
+.avatar__wave {
+    /*-webkit-animation-duration: 5s;
+    animation-duration: 5s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    -webkit-animation-name: wave;
+    animation-name: wave;*/
+    animation: wave 5s ease-in-out;
+    -webkit-animation: wave 5s ease-in-out;
+}
 
 @-webkit-keyframes wave {
     from {
