Updated Games, Experience and Education
Added Qbert and ColoRise games to portfolio
Changed Education, Games and Experience layout to fit index page. Removed the inline style from each div section.

--- a/Pages/Education.cshtml
+++ b/Pages/Education.cshtml
@@ -12,7 +12,9 @@
     <link rel="stylesheet" href="~/css/main.css" />
     <script defer="" src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
-<header class="intro" style="margin-top: -20px !important;">
+<br />
+<br />
+<header class="intro">
     <!-- GBC -->
     <div class="intro__wrap">
         <h1 class="intro__hello pop-wrap">
@@ -67,9 +69,22 @@
                 <img src="~/Images/BW/perforce.png" alt="Perforce" title="perforce.com">
                 <p class="alt">Perforce</p>
             </a>
+            <a href="https://aws.amazon.com/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/amazonaws.png" alt="Amazon AWS" title="aws.amazon.com">
+                <p class="alt">Amazon AWS</p>
+            </a>
             <a href="https://www.unrealengine.com/en-US/unreal" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/unrealengine.png" alt="Unreal Engine" title="unrealengine.com">
                 <p class="alt">Unreal Engine</p>
+            </a>
+            <a href="https://www.android.com/intl/en_ca/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/android.png" alt="Android" title="android.com/intl/en_ca">
+                <p class="alt">Android</p>
+            </a>
+            <br />
+            <a href="https://www.blender.org/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/blender.png" alt="Blender" title="blender.org">
+                <p class="alt">Blender</p>
             </a>
             <a href="https://www.mixamo.com" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/mixamo.png" alt="Mixamo" title="mixamo.com">
@@ -79,18 +94,24 @@
                 <img src="~/Images/BW/zoom.png" alt="Zoom" title="zoom.us">
                 <p class="alt">Zoom</p>
             </a>
+            <a href="https://www.linux.org/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/linux.png" alt="Linux" title="linux.org">
+                <p class="alt">Linux</p>
+            </a>
+            <a href="https://www.microsoft.com/en-ca/windows" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/windows.png" alt="Windows" title="microsoft.com">
+                <p class="alt">Windows</p>
+            </a>
         </div>
 
         <h2 class="intro__tagline" style="text-align: center;">
-            Studied computer languages such as C, C++, C#, Java, Lua and Python.
+            Studied computer languages such as C++, C#, and Python.
             <br />
-            Studied networking, security, operational systems, and database management.
+            Studied networking, multiplayer, consoles programming, and mobile programming.
             <br />
-            Volunteered for mentorship in Object Oriented Programming, Logic, Analysis and Development, Algorithm, and Data Structure.
+            Studied game engines such as Unity3D and Unreal Engine.
             <br />
-            Completeed an undergraduate research in `Web Accessibility`
-            <br />
-            Taught C# and XNA Game Programming classes for grade 12 students.
+            Studied 3D animation, modeling, 2D drawing, and arts.
         </h2>
     </div>
 </header>
@@ -229,22 +250,28 @@
             <img src="~/Images/ifsp.png" alt="IFSP Logo" title="Federal Institute of São Paulo" style="border-radius: 5%; max-width: 250px; max-height: 250px;">
             <br />
             <br />
-            <span class="pop-wrap">Avaré, SP - Brazil
+            <span class="pop-wrap">
+                Avaré, SP - Brazil
                 <img class="popup" src="~/Images/avare.png" alt="Undergraduate Research Certification" style="border-radius: 5%; max-height: 500px;">
+                <br />
+                Presented in November 2012
+            </span>
             <br />
-            Presented in November 2012</span>
             <br />
-            <br />
-            <span class="pop-wrap">Araraquara, SP - Brazil
+            <span class="pop-wrap">
+                Araraquara, SP - Brazil
                 <img class="popup" src="~/Images/araraquara.png" alt="Undergraduate Research Certification" style="border-radius: 5%; max-height: 500px;">
+                <br />
+                Presented in October 2012
+            </span>
             <br />
-            Presented in October 2012</span>
             <br />
-            <br />
-            <span class="pop-wrap">Florianópolis, SC - Brazil
-                <img class="popup" src="~/Images/florianopolis.png" alt="Undergraduate Research Certification" style="border-radius: 5%; max-height: 500px;">            
-            <br />
-            Presented in May and June 2012</span>
+            <span class="pop-wrap">
+                Florianópolis, SC - Brazil
+                <img class="popup" src="~/Images/florianopolis.png" alt="Undergraduate Research Certification" style="border-radius: 5%; max-height: 500px;">
+                <br />
+                Presented in May and June 2012
+            </span>
         </div>
         <h2 class="intro__tagline" style="text-align: center;">
             Researched human-computer interaction, different disabilities, and how they impact users` experience with websites.
@@ -262,7 +289,7 @@
     <div class="intro__wrap">
         <br />
         <h1 class="intro__hello pop-wrap">
-            Biz Game Development - Voluntary Presenter
+            Biz Game Development - Presenter
             <img class="popup" src="~/Images/bizgames.png" alt="Biz Games Certification" style="border-radius: 5%; max-height: 500px;">
         </h1>
         <br />
@@ -282,7 +309,14 @@
         <h2 class="intro__tagline" style="text-align: center;">
             Volunteered to be one of the Business and Game Development presenter at SESC Araraquara.
             <br />
-            Presented 3 mini games made with C# and XNA.
+            Created and presented 3 mini-games made with C# and XNA:
+            <br />
+            <br />
+            An adventure game with dialogues and quests.
+            <br />
+            A simple guitar hero remake.
+            <br />
+            A top-down arcade game inspired on space invaders.
         </h2>
     </div>
     <br />
@@ -337,7 +371,7 @@
         <h2 class="intro__tagline" style="text-align: center;">
             Volunteered to be the secret agent acting role during the ball.
             <br />
-            Responsable for guests interactiveness with the main game played during the night.
+            Responsible for guests' interactiveness with the main game played during the night.
         </h2>
     </div>
     <br />
