--- a/Pages/Experience.cshtml
+++ b/Pages/Experience.cshtml
@@ -12,10 +12,14 @@
     <link rel="stylesheet" href="~/css/main.css" />
     <script defer="" src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
-<header class="intro" style="margin-top: -60px;">
+<br />
+<br />
+<header class="intro">
     <!-- HALTON -->
     <div class="intro__wrap">
-        <h1 class="intro__hello">Game Programming Teacher</h1>
+        <h1 class="intro__hello">
+            Game Programming Teacher
+        </h1>
         <br />
         <br />
         <br />
@@ -25,7 +29,7 @@
             <br />
             <br />
             <br />
-            <img src="~/Images/halton.png" alt="Halton STEM Club Logo" title="Halton STEM Club" style="border-radius: 5%; max-width: 250px; max-height: 250px;">
+            <img src="~/Images/halton.png" alt="Halton STEM Club Logo" title="Halton STEM Club" style="border-radius: 5%; max-width: 250px !important; max-height: 250px !important;">
             <br />
             <br />
             <span>Burlington, ON - Canada</span>
@@ -49,11 +53,11 @@
                 <img src="~/Images/BW/visualstudio.png" alt="Visual Studio" title="visualstudio.microsoft.com">
                 <p class="alt">Visual Studio</p>
             </a>
+            <br />
             <a href="https://www.mixamo.com" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/mixamo.png" alt="Mixamo" title="mixamo.com">
                 <p class="alt">Mixamo</p>
             </a>
-            <br />
             <a href="https://zoom.us/" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/zoom.png" alt="Zoom" title="zoom.us">
                 <p class="alt">Zoom</p>
@@ -68,12 +72,16 @@
             Responsible for planning, organizing, and teaching <span class="name">
                 game programming
             </span> remote classes with
-            <span class="name">Unity3D</span> and <span class="name">C#</span>
-            for semi-private classes of 2 students.
+            <span class="name">Unity3D</span> and <span class="name">C#</span>.
+            <br />
+            <br />
+            Taught semi-private classes of 2 students.
+            <br />
             <br />
             Recognized for teaching and course coordination excellence.
         </h2>
     </div>
+    <br />
 </header>
 <div style="clear:both; border-bottom: 1px solid black; width: 100%;"></div>
 <header class="intro">
@@ -90,7 +98,7 @@
             <br />
             <br />
             <br />
-            <img src="~/Images/wells.jpg" alt="Wells Academy Logo" style="border-radius: 5%; max-width: 200px; max-height: 200px;">
+            <img src="~/Images/wells.jpg" alt="Wells Academy Logo" style="border-radius: 5%; max-width: 200px !important; max-height: 250px !important; ">
             <br />
             <br />
             <span>Markham, ON - Canada</span>
@@ -166,9 +174,12 @@
             Responsible for planning, organizing, and teaching
             <span class="name">game programming</span> and <span class="name">web development</span>
             remote classes with
-            <span class="name">Unity3D</span> and <span class="name">C#</span>
+            <span class="name">Unity3D</span> and <span class="name">C#</span>.
+            <br />
+            <br />
             <br />
             Taught semi-private class sizes up to 6 students from grade 6 to 12.
+            <br />
             <br />
             Recognized for teaching and course coordination excellence.
         </h2>
@@ -189,7 +200,7 @@
             <a href="http://www.thinnox.com/" target="_blank"><span>thinnox.com</span></a>
             <br />
             <br />
-            <img src="~/Images/thinnox.jpg" alt="Thinnox Logo" style="border-radius: 5%; max-width: 220px; max-height: 220px;">
+            <img src="~/Images/thinnox.jpg" alt="Thinnox Logo" style="border-radius: 5%; max-width: 220px; max-height: 250px;">
             <br />
             <span>Mississauga, ON - Canada</span>
             <br />
@@ -281,12 +292,13 @@
             <span class="name">programming, 3D animation, modeling, circuits, technical drawing, and game design </span>
             presential and remote classes.
             <br />
-            Class sizes of 12 students from grade 8 to 12.
+            <br />
+            Taught class sizes up to 12 students from grade 8 to 12.
+            <br />
             <br />
             Recognized for excellent teaching, corse coordination, and instructional reports to student’s parents.
         </h2>
     </div>
-    <br />
     <br />
 </header>
 <div style="clear:both; border-bottom: 1px solid black; width: 100%;"></div>
@@ -304,7 +316,7 @@
             <br />
             <br />
             <br />
-            <img src="~/Images/rp4k.png" alt="RP4K Logo" style="border-radius: 5%; max-width: 180px; max-height: 180px;">
+            <img src="~/Images/rp4k.png" alt="RP4K Logo" style="border-radius: 5%; max-width: 180px; max-height: 250px;">
             <br />
             <br />
             <span>Toronto, ON - Canada</span>
@@ -338,9 +350,10 @@
         </div>
         <h2 class="intro__tagline" style="text-align: center;">
             Responsible for teaching game programming classes with
-            <span class="name">Visual Basic</span>, <span class="name">Alice2</span>, and <span class="name">Scratch</span>
+            <span class="name">Visual Basic</span>, <span class="name">Alice2</span>, and <span class="name">Scratch</span>.
             <br />
-            Class sizes of 6 students from grade 4 to 10.
+            <br />
+            Taught class sizes of 6 students from grade 4 to 10.
         </h2>
     </div>
     <br />
@@ -435,9 +448,13 @@
         </div>
 
         <h2 class="intro__tagline" style="text-align: center;">
-            Led a team responsible for back and front-end development of an automated medical survey system used all over EUA.
+            Led a development team responsible for back and front-end programming of an automated medical survey system used over EUA.
+            <br />
             <br />
             Responsible for database management and software architecture using MVC5.
+            <br />
+            <br />
+            Survey collected feedback via 30 online questions to be answered by patients after their visit to a clinic.
         </h2>
     </div>
     <br />
@@ -457,7 +474,7 @@
             <br />
             <br />
             <br />
-            <img src="~/Images/grx.jpg" alt="GRX Soluções Logo" style="border-radius: 5%; max-width: 180px; max-height: 180px;">
+            <img src="~/Images/grx.jpg" alt="GRX Soluções Logo" style="border-radius: 5%; max-width: 180px; max-height: 250px;">
             <br />
             <span>Araraquara, SP - Brazil</span>
             <br />
@@ -565,7 +582,7 @@
             <br />
             <br />
             <br />
-            <img src="~/Images/hp.jpg" alt="Hewlett Packard Logo" style="border-radius: 5%; max-width: 200px; max-height: 200px;">
+            <img src="~/Images/hp.jpg" alt="Hewlett Packard Logo" style="border-radius: 5%; max-width: 200px; max-height: 250px;">
             <br />
             <br />
             <span>Araraquara, SP - Brazil</span>
@@ -628,8 +645,8 @@
         </div>
 
         <h2 class="intro__tagline" style="text-align: center;">
-            Worked in a contingency team responsible for managing, monitoring, and testing
-            SQL database jobs, bank applications, web pages, automatic emailing, and interactive voice response.
+            Worked in a contingency team responsible for managing, monitoring, testing, and sustaining all 5 main systems fully functional.
+            Experience with database jobs, bank applications, web pages, automatic emailing, and interactive voice response.
         </h2>
     </div>
     <br />
@@ -887,9 +904,11 @@
         box-shadow: inset 0 -3px 0 #bae67e
     }
 
-        .intro__contact .highlight-link:hover {
-            -webkit-box-shadow: inset 0 -33px 0 0 #719f32;
-            box-shadow: inset 0 -33px 0 0 #719f32;
-            color: #fff
-        }
+    .intro__contact .highlight-link:hover {
+        -webkit-box-shadow: inset 0 -33px 0 0 #719f32;
+        box-shadow: inset 0 -33px 0 0 #719f32;
+        color: #fff
+    }
+
+
 </style>
