--- a/Pages/Games.cshtml
+++ b/Pages/Games.cshtml
@@ -12,65 +12,161 @@
     <link rel="stylesheet" href="~/css/main.css" />
     <script defer="" src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
+<br />
+<br />
+<header class="intro">
+    <!-- QBERT -->
+    <div class="intro__wrap">
+        <h1 class="intro__hello pop-wrap">
+            QBert - Arcade Game Remake
+            <img class="popup" src="~/Images/qbertc2.png" alt="QBERT Different Levels" style="border-radius: 5%; max-height: 500px;">
+        </h1>
+        <br />
+        <br />
+        <br />
+        <div class="company">
+            <h1 class="intro__hello">Qbert WebGL Player</h1>
+            <a href="https://soueuroya.github.io/QBertWebGL/" target="_blank"><span>soueuroya.github.io/QBertWebGL</span></a>
+            <br />
+            <br />
+            <br />
+            <img src="~/Images/qbertc1.png" alt="Qbert Menu and Level 1" title="QBert By Daniel Boldrin" style="border-radius: 5%; max-width: 350px;">
+            <br />
+            <br />
+            <span>Itch.io page</span>
+            <br />
+            <a href="https://danielboldrin.itch.io/qbert" target="_blank">danielboldrin.itch.io/qbert</a>
+            <br />
+            <br />
+            <span>Technologies Used</span>
+            <br />
+            <a href="https://unity.com/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/unity.png" alt="Unity3D" title="unity.com">
+                <p class="alt">Unity3D</p>
+            </a>
+            <a href="https://docs.microsoft.com/en-us/dotnet/csharp/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/csharp.png" alt="C#" title="docs.microsoft.com/en-us/dotnet/csharp">
+                <p class="alt">C#</p>
+            </a>
+            <a href="https://visualstudio.microsoft.com/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/visualstudio.png" alt="Visual Studio" title="visualstudio.microsoft.com">
+                <p class="alt">Visual Studio</p>
+            </a>
+            <a href="https://github.com/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/github.png" alt="Github" title="github.com">
+                <p class="alt">Github</p>
+            </a>
+        </div>
 
-<header class="intro">
-    <div class="intro__wrap">
-        <br />
-        <br />
-        <h1 class="intro__hello">Game 1</h1>
-        <br />
-        <br />
-        <br />
-        <img src="~/Images/BW/word.png" alt="Daniel Corbi Boldrin Avatar" style="border-radius: 25%; max-width: 100px; max-height: 100px;">
-        <img src="~/Images/BW/pdf.png" alt="Daniel Corbi Boldrin Avatar" style="border-radius: 25%; max-width: 100px; max-height: 100px;">
-        <h2 class="intro__tagline" style="text-align: right;">
-            I'm <span class="name">Daniel Boldrin</span>, a passionate professional System Analyst and Game Programmer who loves to design and develop games and applications.
+        <h2 class="intro__tagline" style="text-align: center;">
+            As a personal project, I made a small version of the Arcade game: Qbert, in Unity3D.
+            <br />
+            <br />
+            My main goal was to make the game in 3D using an orthographic camera to get the visuals as close as possible to the original.
+            <br />
+            <br />
+            There are 4 different levels with increasing difficulty and 6 different objects to interact with.
+            <br />
+            <br />
+            My main challenge in this project was moving the objects in the 3D space to look the same as the original game.
+            <br />
+            <br />
+            For example, when jumping upwards in the cube pyramid, Qbert and Coil have to go up very fast due to the perspective.
+            <br />
+            <br />
+            I fixed this issue by translating the object in a different curvature for each, UP and DOWN jumps.
+            <br />
+            <br />
+            Also, to make sure the objects stay perfectly aligned, they are recentered after colliding with the ground.
         </h2>
     </div>
-    <h3 class="intro__contact" style="text-align: center; overflow:hidden;">
-        <p>
-            <span>
-                <a href="mailto:daniel_cboldrin@hotmail.com" target="_blank" class="highlight-link">daniel_cboldrin@hotmail.com<img class="intro__icon" src="~/Images/BW/email-t.png" alt="Daniel Corbi Boldrin Avatar" style="border-radius: 50%; width:25px; height:25px; margin-left: 10px;"></a>
-            </span>
-        </p>
-    </h3>
-    <br />
-    <br />
 </header>
+<div style="clear:both; border-bottom: 1px solid black; width: 100%; height: 10px;"></div>
 <header class="intro">
+    <!-- ColoRise -->
     <div class="intro__wrap">
         <br />
+        <h1 class="intro__hello pop-wrap">
+            Colorise - Game Jam Submission
+            <img class="popup" src="~/Images/colorisec2.png" alt="Syste, Analysis and Development Diploma" style="border-radius: 5%; max-height: 500px;">
+        </h1>
         <br />
-        <h1 class="intro__hello">Game 2</h1>
         <br />
         <br />
-        <br />
-        <img class="intro__icon" src="~/Images/avatar.jpg" alt="Daniel Corbi Boldrin Avatar" style="border-radius: 25% 50% 50% 25%;">
-        <h2 class="intro__tagline" style="text-align: right;">
-            I'm <span class="name">Daniel Boldrin</span>, a passionate professional System Analyst and Game Programmer who loves to design and develop games and applications.
+        <div class="company">
+            <h1 class="intro__hello">ColoRise WebGL Player</h1>
+            <a href="https://soueuroya.github.io/ColoRise/" target="_blank"><span>soueuroya.github.io/ColoRise</span></a>
+            <br />
+            <br />
+            <br />
+            <img src="~/Images/colorisec1.png" alt="ColoRise Intro" title="ColoRise Intro" style="border-radius: 5%; max-width: 350px;">
+            <br />
+            <br />
+            <span>Itch.io page</span>
+            <br />
+            <a href="https://danielboldrin.itch.io/colorise" target="_blank">danielboldrin.itch.io/colorise</a>
+            <br />
+            <br />
+            <span>Technologies Used</span>
+            <br />
+            <br />
+            <a href="https://unity.com/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/unity.png" alt="Unity3D" title="unity.com">
+                <p class="alt">Unity3D</p>
+            </a>
+            <a href="https://docs.microsoft.com/en-us/dotnet/csharp/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/csharp.png" alt="C#" title="docs.microsoft.com/en-us/dotnet/csharp">
+                <p class="alt">C#</p>
+            </a>
+            <a href="https://visualstudio.microsoft.com/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/visualstudio.png" alt="Visual Studio" title="visualstudio.microsoft.com">
+                <p class="alt">Visual Studio</p>
+            </a>
+            <a href="https://github.com/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/github.png" alt="Github" title="github.com">
+                <p class="alt">Github</p>
+            </a>
+        </div>
+
+        <h2 class="intro__tagline" style="text-align: center;">
+            As a personal Game Jam project, I created the game ColoRise, a colorful medium-fast paced game where your objective is to reach the top of the tower.
+            <br />
+            <br />
+            The rules are:
+            <br />
+            <br />
+            You can't touch platforms that are the same color as you.
+            <br />
+            <br />
+            Every time you jump of a platform your player's color changes to the same as the platform.
+            <br />
+            <br />
+            If you hit your head under a platform, your streak resets.
+            <br />
+            <br />
+            There are 4 levels with increasing difficulty and rotating platforms with different speeds and directions.
         </h2>
     </div>
-    <h3 class="intro__contact" style="text-align: center; overflow:hidden;">
-        <p>
-            <span>
-                <a href="mailto:daniel_cboldrin@hotmail.com" target="_blank" class="highlight-link">daniel_cboldrin@hotmail.com<img class="intro__icon" src="~/Images/BW/email-t.png" alt="Daniel Corbi Boldrin Avatar" style="border-radius: 50%; width:25px; height:25px; margin-left: 10px;"></a>
-            </span>
-        </p>
-    </h3>
-    <br />
     <br />
 </header>
+<div style="clear:both; border-bottom: 1px solid black; width: 100%;"></div>
 <style>
+    .intro__tagline {
+        text-align: left !important;
+        font-size: 15px !important;
+        line-height: 22px !important;
+    }
+
     .scrollable {
         width: 100%;
-        height: 91vh;
+        height: 90vh;
         overflow: hidden;
         padding: 0px !important;
     }
 
     .scrollable:hover {
         width: 100%;
-        height: 91vh;
+        height: 90vh;
         overflow-y: auto;
         padding-left: 16.8px !important;
     }
