--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -59,6 +59,13 @@
         text-align: center;
     }
 
+    .scrollable {
+        width: 100%;
+        height: 90vh;
+        overflow: hidden;
+        padding: 0px !important;
+    }
+
     .body-back-color {
         background-color: #b0c4de;
     }
