--- a/wwwroot/css/main.css
+++ b/wwwroot/css/main.css
@@ -485,12 +485,20 @@ html #top-button img {
             border-radius: 100%
         }
 
+.navbar {
+    background-color: lavender !important;
+}
+
+.footer {
+    background-color: lavender !important;
+}
+
 .intro {
     /*padding: 20px;*/
     /*height: 100vh;*/
     width: 100%;
     
-    height: 91.6vh;
+    min-height: 50vh;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -615,7 +623,7 @@ html #top-button img {
 .intro__hello {
     font-weight: 300;
     font-size: 35px;
-    min-width: 350px;
+    min-width: 400px;
 }
 
 .avatar__wave {
